--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,7 +1,7 @@
 {
-  "short_name": "Goose Finance",
-  "name": "Goose Finance",
-  "description": "Farm EGG with LP Tokens",
+  "short_name": "Bourbon Finance",
+  "name": "Bourbon Finance",
+  "description": "Farm BRRL with LP Tokens",
   "icons": [
     {
       "src": "favicon.ico",
